--- a/doc/01.md
+++ b/doc/01.md
@@ -215,3 +215,31 @@ Node.js简介
 自从有了Node.js，前端工程化就迎来了春天
 
 增量发布：发布的时候，不会去删除老的CSS或JS文件，因为会对于正在访问的用户造成影响
+
+IDE高级操作
+* 多光标
+* Emmet(tab键)
+  * 自动补全
+  * 嵌套 > + ^ * ()
+  * 属性 # . []
+  * 数字 $
+  * 内容 {}
+  * CSS缩写
+* 高级快捷键，太多啦
+* 重命名（引用、批量修改）
+
+响应式框架
+* Bootstrap
+* Foundation
+* Semantic UI
+* PureCSS：轻量级
+
+使用框架缺点
+* 体积大而重，使用起来不方便
+* 样式单调，没有创新，大多适合用来做后台管理系统
+
+原型设计和切图
+* Axure主流原型设计工具
+* Sketch（mac）
+* 切图（gif和png才能透明，jpeg不能透明）
+* 交互设计（Flinto、Principle）
